editor/sass/editor.scss
/* ... */
.ui-panel.hierarchy-controls {
    // position: absolute;
    // left: 0;
    // bottom: 0;
    // right: 0;
    // width: auto;
    // border-top: 1px solid $bcg-dark;
    float: right;
    background-color: transparent;

    > .content {
        background-color: transparent;
        min-width: 96px;
        height: 32px;
        overflow: hidden;

        > .ui-button {
            float: right;
            margin: 0;
            width: 32px;
            height: 32px;
            line-height: 32px;
            border: none;
            padding: 0;
            color: #9ba1a3;
            @extend .font-icon;
            font-size: 16px;
            text-align: center;
            background-color: transparent;

            &.active {
                color: $text-active;
                background-color: $bcg-darkest;
            }
            &.disabled {
                opacity: 1;
                color: mix(#9ba1a3, #364346, 30%);

                &:hover,
                &:focus {
                    color: mix(#9ba1a3, #364346, 30%);
                    background-color: transparent;
                }
            }
            &:hover,
            &:focus {
                color: #fff;
                background-color: $bcg-darkest;
            }
        }
    }
}

.ui-grid.assets {
    > .ui-grid-item {
        width: 104px;
        height: 104px;
        position: relative;

        &.type-animation {
            > .thumbnail.placeholder:after {
                content: '\E274';
            }
            > .icon:after {
                content: '\E274';
            }
        }
        &.type-audio {
            > .thumbnail.placeholder:after {
                content: '\E262';
            }
            > .icon:after {
                content: '\E262';
            }
        }
        &.type-cubemap {
            > .thumbnail.placeholder:after {
                content: '\E515';
            }
            > .icon:after {
                content: '\E515';
            }
        }
        &.type-json {
            > .thumbnail.placeholder:after {
                content: '\E353';
            }
            > .icon:after {
                content: '\E353';
            }
        }
        &.type-material {
            > .thumbnail.placeholder:after {
                content: '\E547';
            }
            > .icon:after {
                content: '';
            }
        }
        &.type-model {
            > .thumbnail.placeholder:after {
                content: '\E417';
            }
            > .icon:after {
                content: '\E417';
            }
        }
        &.type-scene {
            > .thumbnail.placeholder:after {
                content: '\E417';
            }
            > .icon:after {
                content: '\E417';
            }
        }
        &.type-script {
            > .thumbnail.placeholder:after {
                content: '\E353';
            }
            > .icon:after {
                content: '\E353';
            }
        }
        &.type-texture {
            > .thumbnail.placeholder:after {
                content: '\E236';
            }
            > .icon:after {
                content: '';
            }
        }
        &.type-text {
            > .thumbnail.placeholder:after {
                content: '\E284';
            }
            > .icon:after {
                content: '\E284';
            }
        }

        &:hover {
            > .thumbnail {
                color: $text-primary;
            }
            > .label {
                background-color: mix($bcg-darkest, $bcg-dark, 50%);
            }
            > .icon {
                color: $text-primary;
            }
        }
        &.selected {
            > .thumbnail {
                color: $text-primary;
            }
            > .label {
                background-color: $bcg-darkest;
            }
            &:hover > .label {
                background-color: mix($bcg-darkest, $bcg-darker, 75%);
            }
        }
        > .thumbnail {
            width: 64px;
            height: 64px;
            line-height: 60px;
            margin: 12px 20px;
            background-position: center center;
            background-size: 64px 64px;
            background-repeat: no-repeat;
            text-align: center;
            color: $text-darkest;

            &.placeholder:after {
                @extend .font-icon;
                font-size: 48px;
                font-weight: 100;
            }
        }
        > .icon {
            position: absolute;
            width: 22px;
            height: 22px;
            top: 4px;
            left: 4px;
            @extend .font-icon;
            font-size: 18px;
            font-weight: 100;
            line-height: 20px;
            text-align: center;

            &:after {
                content: '\E211';
            }
        }
        > .label {
            @extend .font-regular;

            position: absolute;
            right: 0;
            left: 0;
            bottom: 8px;
            width: auto;
            max-width: 100px;
            line-height: 14px;
            margin: 0px;
            padding: 2px;
            font-size: 12px;
            text-overflow: ellipsis;
            text-align: center;
            overflow: hidden;
            color: $text-primary;
            background-color: rgba($bcg-darker, 0.8);
        }
    }
}
/* ... */

